fix the decimal point & word wrap issue

--- a/assets/css/bonzo.css
+++ b/assets/css/bonzo.css
@@ -5,6 +5,3 @@
   padding-left: 24px;
   font-size: 17px !important;
 }
-.el-table_1_column_1   {
-  background-color: white !important;
-  }
